tests/positive/basic/pad_helpers/input.ci
void main(string[] args) {
    print("[" + padLeft("hi", 6, "-") + "]\n");
    print("[" + padRight("hi", 5, "+-") + "]\n");
}
