tests/negative/runtime/repeat_negative_count/input.ci
void main(string[] args) {
    print(repeat("x", -1) + "\n");
}
